--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,9 @@
         Name: <%= user.name %>
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+          <% if current_user.id!=user.id && !current_user.friends.any?{|u1| u1.id==user.id} && !current_user.pending_friends.any?{|u1| u1.id==user.id} %>
+          <%= button_to 'friend request',  "/friend_request?id=#{user.id}", class: 'btn btn-secondary' %>
+          <% end%>
         </span>
       </li>
     <% end %>
