--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+.d-flex{
+  display: flex;
+  justify-content: space-between;
+}
+.flex-1{
+  flex:1;
+}
+
+
