--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
           <%= menu_link_to 'All users', users_path %>
         </div>
       </div>
-      <div class="flex-2 d-flex">
+      <div class="flex-2 d-flex flex-r-reverse">
       <% if current_user %>
-      <span>Welcome <%= current_user.name%></span>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+        <span>Welcome <%= current_user.name%></span>
       <% else %>
         <%= link_to 'Sign in', user_session_path %>
       <% end %>
